Fix contrast btns problem

--- a/style.css
+++ b/style.css
@@ -119,6 +119,10 @@ body {
     height: 100%;
 }
 
+button {
+  color:black;
+}
+
 .card1 {
     display: flex;
     flex-direction: column;
